# KLU

./: .env.template  .gitignore  README.md  docker-compose.yml  nginx.conf
klu_backend/: .bandit  .dockerignore  .ruff.toml  .wily.cfg  Dockerfile  main.py  pyproject.toml
klu_backend/app/: worker.py
klu_backend/app/api/: api.py
klu_backend/app/api/endpoints/: transactions.py
klu_backend/app/core/: config.py
klu_backend/app/db/: session.py
klu_backend/app/models/: transaction.py
klu_backend/app/repositories/: transaction_repository.py
klu_backend/app/schemas/: transaction.py
klu_backend/app/services/: blumonpay_service.py
klu_backend/app/tasks/: payment_tasks.py
klu_backend/migrations/: env.py
klu_backend/migrations/versions/: fff6e8645c55_first_migration.py
klu_ui/: Dockerfile  next.config.mjs  package-lock.json  package.json  tailwind.config.js
klu_ui/components/: Layout.js  PaymentForm.js
klu_ui/components/ui/: Alert.js  Button.js  Card.js
klu_ui/pages/: _document.js  index.js
klu_ui/pages/api/transactions/: [id].js  index.js
klu_ui/pages/confirmation/: [id].js
klu_ui/styles/: globals.css
klu_ui/utils/: api.js  validation.js
